--- a/test-output/index.html
+++ b/test-output/index.html
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-SmokeSuite" class="navigator-link">
-              <span class="suite-name border-passed">SmokeSuite</span>
+              <span class="suite-name border-skipped">SmokeSuite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -92,7 +92,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">4 methods,  1 skipped,  3 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title skipped">Skipped methods</span>
+                    <span class="show-or-hide-methods skipped">
+                      <a href="#" panel-name="suite-SmokeSuite" class="hide-methods skipped suite-SmokeSuite"> (hide)</a> <!-- hide-methods skipped suite-SmokeSuite -->
+                      <a href="#" panel-name="suite-SmokeSuite" class="show-methods skipped suite-SmokeSuite"> (show)</a> <!-- show-methods skipped suite-SmokeSuite -->
+                    </span>
+                    <div class="method-list-content skipped suite-SmokeSuite">
+                      <span>
+                        <img src="skipped.png" width="3%"/>
+                        <a href="#" panel-name="suite-SmokeSuite" title="com.facebookRegistrationTests.RegistrationTest" class="method navigator-link" hash-for-method="registrationTest_Stewrt">registrationTest_Stewrt</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content skipped suite-SmokeSuite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -113,11 +127,6 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-SmokeSuite" title="com.facebookRegistrationTests.RegistrationTest" class="method navigator-link" hash-for-method="registrationTest_Stewrt">registrationTest_Stewrt</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-SmokeSuite" title="com.facebookLoginTests.LoginTest" class="method navigator-link" hash-for-method="testLogin">testLogin</a> <!-- method navigator-link -->
                       </span>
                       <br/>
@@ -133,6 +142,45 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-SmokeSuite" class="panel SmokeSuite">
+          <div class="suite-SmokeSuite-class-skipped">
+            <div class="main-panel-header rounded-window-top">
+              <img src="skipped.png"/>
+              <span class="class-name">com.facebookRegistrationTests.RegistrationTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="registrationTest_Stewrt">
+                  </a> <!-- registrationTest_Stewrt -->
+                  <span class="method-name">registrationTest_Stewrt</span>
+                  <div class="stack-trace">org.openqa.selenium.NoSuchWindowException: no such window: target window already closed
+from unknown error: web view not found
+  (Session info: MicrosoftEdge=110.0.1587.46)
+Build info: version: &apos;4.7.2&apos;, revision: &apos;4d4020c3b7&apos;
+System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.2&apos;
+Driver info: org.openqa.selenium.edge.EdgeDriver
+Command: [2d868a2dbaee54021b2599623b0d70d7, maximizeCurrentWindow {}]
+Capabilities {acceptInsecureCerts: false, browserName: msedge, browserVersion: 110.0.1587.46, ms:edgeOptions: {debuggerAddress: localhost:61577}, msedge: {msedgedriverVersion: 110.0.1587.46 (2d93e523d0a6..., userDataDir: C:\Users\mofmo\AppData\Loca...}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: WINDOWS, proxy: Proxy(), se:cdp: ws://localhost:61577/devtoo..., se:cdpVersion: 110.0.1587.46, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:virtualAuthenticators: true}
+Session ID: 2d868a2dbaee54021b2599623b0d70d7
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.createException(W3CHttpResponseCodec.java:200)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:133)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:53)
+	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:184)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:167)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:142)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:535)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:590)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:594)
+	at org.openqa.selenium.remote.RemoteWebDriver$RemoteWebDriverOptions$RemoteWindow.maximize(RemoteWebDriver.java:946)
+	at com.BaseTest.BaseTest.openApp(BaseTest.java:49)
+	at com.BaseTest.BaseTest.setUp(BaseTest.java:31)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 36 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-SmokeSuite-class-skipped -->
           <div class="suite-SmokeSuite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -168,13 +216,6 @@
                   <span class="method-name">registrationTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="registrationTest_Stewrt">
-                  </a> <!-- registrationTest_Stewrt -->
-                  <span class="method-name">registrationTest_Stewrt</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-SmokeSuite-class-passed -->
         </div> <!-- panel SmokeSuite -->
@@ -187,13 +228,14 @@
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;SmokeSuite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
-  &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;LoginTest&quot;&gt;
+    &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.facebookLoginTests.LoginTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- LoginTest --&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;RegistrationTest&quot;&gt;
+    &lt;parameter name=&quot;browser&quot; value=&quot;edge&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.facebookRegistrationTests.RegistrationTest&quot;/&gt;
     &lt;/classes&gt;
@@ -242,19 +284,19 @@ data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'invalidLoginTest')
 data.setCell(0, 2, 'com.facebookLoginTests.LoginTest')
-data.setCell(0, 3, 5978);
+data.setCell(0, 3, 5381);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'testLogin')
 data.setCell(1, 2, 'com.facebookLoginTests.LoginTest')
-data.setCell(1, 3, 3828);
+data.setCell(1, 3, 4699);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'registrationTest')
 data.setCell(2, 2, 'com.facebookRegistrationTests.RegistrationTest')
-data.setCell(2, 3, 1380);
+data.setCell(2, 3, 2155);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'registrationTest_Stewrt')
 data.setCell(3, 2, 'com.facebookRegistrationTests.RegistrationTest')
-data.setCell(3, 3, 1220);
+data.setCell(3, 3, 0);
 window.suiteTableData['SmokeSuite']= { tableData: data, tableDiv: 'times-div-SmokeSuite'}
 return data;
 }
@@ -292,50 +334,52 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">invalidLoginTest</span>
-                <span class="method-start">2511 ms</span>
+                <span class="method-start">5124 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">8492 ms</span>
+                <span class="method-start">10510 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setUp(chrome)</span>
-                <span class="method-start">8616 ms</span>
+                <span class="method-start">10647 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">testLogin</span>
-                <span class="method-start">9965 ms</span>
+                <span class="method-start">12533 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">13794 ms</span>
+                <span class="method-start">17233 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.facebookRegistrationTests.RegistrationTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
-                <span class="method-name">setUp(chrome)</span>
-                <span class="method-start">13954 ms</span>
+                <span class="method-name">setUp(edge)</span>
+                <span class="method-start">17453 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">registrationTest</span>
-                <span class="method-start">15351 ms</span>
+                <span class="method-start">19461 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">16732 ms</span>
+                <span class="method-start">21617 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
-                <span class="method-name">setUp(chrome)</span>
-                <span class="method-start">16846 ms</span>
+                <img src="failed.png">
+                </img>
+                <span class="method-name">setUp(edge)</span>
+                <span class="method-start">21890 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">registrationTest_Stewrt</span>
-                <span class="method-start">18184 ms</span>
+                <span class="method-start">23210 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">19405 ms</span>
+                <span class="method-start">23215 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
