--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7677d1">  <td>23/02/12 23:23:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.registrationTest()[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@57a3af25]">registrationTest</td> 
+<tr bgcolor="7677d1">  <td>23/02/14 18:54:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.invalidLoginTest()[pri:0, instance:com.facebookLoginTests.LoginTest@57a3af25]">invalidLoginTest</td> 
   <td>main@182531396</td>   <td></td> </tr>
-<tr bgcolor="7677d1">  <td>23/02/12 23:23:24</td>   <td>3633</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.registrationTest_Stewrt()[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@57a3af25]">registrationTest_Stewrt</td> 
+<tr bgcolor="8d7062">  <td>23/02/14 18:54:08</td>   <td>5547</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.facebookLoginTests.LoginTest@57a3af25]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@182531396</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>23/02/14 18:54:08</td>   <td>5547</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.facebookLoginTests.LoginTest@57a3af25]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@182531396</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>23/02/14 18:54:13</td>   <td>11042</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.facebookLoginTests.LoginTest@57a3af25]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@182531396</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>23/02/14 18:54:13</td>   <td>11042</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.facebookLoginTests.LoginTest@57a3af25]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@182531396</td>   <td></td> </tr>
+<tr bgcolor="7677d1">  <td>23/02/14 18:54:09</td>   <td>7140</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testLogin()[pri:0, instance:com.facebookLoginTests.LoginTest@57a3af25]">testLogin</td> 
   <td>main@182531396</td>   <td></td> </tr>
-<tr bgcolor="8d7062">  <td>23/02/12 23:23:23</td>   <td>1898</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@57a3af25]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@182531396</td>   <td></td> </tr>
-<tr bgcolor="8d7062">  <td>23/02/12 23:23:23</td>   <td>1898</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@57a3af25]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@182531396</td>   <td></td> </tr>
-<tr bgcolor="8d7062">  <td>23/02/12 23:23:26</td>   <td>5271</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@57a3af25]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@182531396</td>   <td></td> </tr>
-<tr bgcolor="8d7062">  <td>23/02/12 23:23:26</td>   <td>5271</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@57a3af25]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@182531396</td>   <td></td> </tr>
 </table>
