--- a/test-output/old/Regression Suite/methods.html
+++ b/test-output/old/Regression Suite/methods.html
@@ -1,58 +1,58 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Regression Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7479c6">  <td>23/02/12 23:29:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.invalidLoginTest()[pri:0, instance:com.facebookLoginTests.LoginTest@7b2bbc3]">invalidLoginTest</td> 
-  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="cddd80">  <td>23/02/12 23:29:47</td>   <td>-7061</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.searchTests.TestSearch@48f2bd5b]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="cddd80">  <td>23/02/12 23:30:05</td>   <td>10155</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.facebookLoginTests.LoginTest@7b2bbc3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="cddd80">  <td>23/02/12 23:30:11</td>   <td>16187</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.searchTests.TestSearchPOM2@a1153bc]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="616382">  <td>23/02/12 23:30:18</td>   <td>24012</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.registrationTest()[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@1aafa419]">registrationTest</td> 
-  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="cddd80">  <td>23/02/12 23:30:05</td>   <td>10155</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.facebookLoginTests.LoginTest@7b2bbc3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="cddd80">  <td>23/02/12 23:29:47</td>   <td>-7255</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.searchTests.TestSearchPOM@4efbca5a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="cddd80">  <td>23/02/12 23:30:24</td>   <td>29117</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@1aafa419]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="cddd80">  <td>23/02/12 23:30:11</td>   <td>16187</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.searchTests.TestSearchPOM2@a1153bc]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="cddd80">  <td>23/02/12 23:29:41</td>   <td>-13744</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.searchTests.TestSearchPOM@4efbca5a]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="cddd80">  <td>23/02/12 23:30:24</td>   <td>29117</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@1aafa419]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>23/02/12 23:30:12</td>   <td>17881</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSearchPOM2.testSearchSelenium()[pri:0, instance:com.searchTests.TestSearchPOM2@a1153bc]">testSearchSelenium</td> 
-  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="616382">  <td>23/02/12 23:30:22</td>   <td>27509</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.registrationTest_Stewrt()[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@1aafa419]">registrationTest_Stewrt</td> 
-  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="916c74">  <td>23/02/12 23:29:36</td>   <td>-18371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSearchPOM.testSearch()[pri:0, instance:com.searchTests.TestSearchPOM@4efbca5a]">testSearch</td> 
-  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="929aa9">  <td>23/02/12 23:29:49</td>   <td>-5293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSearch.testSearch()[pri:0, instance:com.searchTests.TestSearch@48f2bd5b]">testSearch</td> 
-  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="cddd80">  <td>23/02/12 23:30:20</td>   <td>25878</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@1aafa419]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="cddd80">  <td>23/02/12 23:29:41</td>   <td>-13744</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.searchTests.TestSearchPOM@4efbca5a]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="cddd80">  <td>23/02/12 23:29:59</td>   <td>4107</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.facebookLoginTests.LoginTest@7b2bbc3]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="cddd80">  <td>23/02/12 23:30:17</td>   <td>22082</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.searchTests.TestSearchPOM2@a1153bc]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="cddd80">  <td>23/02/12 23:30:20</td>   <td>25878</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@1aafa419]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="cddd80">  <td>23/02/12 23:29:59</td>   <td>4107</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.facebookLoginTests.LoginTest@7b2bbc3]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>23/02/12 23:30:07</td>   <td>12064</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSearchPOM2.testSearch()[pri:0, instance:com.searchTests.TestSearchPOM2@a1153bc]">testSearch</td> 
-  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="cddd80">  <td>23/02/12 23:29:53</td>   <td>-1749</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.searchTests.TestSearch@48f2bd5b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="cddd80">  <td>23/02/12 23:30:17</td>   <td>22082</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.searchTests.TestSearchPOM2@a1153bc]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="916c74">  <td>23/02/12 23:29:42</td>   <td>-12058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSearchPOM.testSearchSelenium()[pri:0, instance:com.searchTests.TestSearchPOM@4efbca5a]">testSearchSelenium</td> 
-  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="cddd80">  <td>23/02/12 23:29:47</td>   <td>-7255</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.searchTests.TestSearchPOM@4efbca5a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="7479c6">  <td>23/02/12 23:30:00</td>   <td>5777</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testLogin()[pri:0, instance:com.facebookLoginTests.LoginTest@7b2bbc3]">testLogin</td> 
-  <td>main@2044215423</td>   <td></td> </tr>
+<tr bgcolor="986f76">  <td>23/02/16 18:54:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.searchTests.TestSearch@1bb5a082]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="986f76">  <td>23/02/16 18:55:42</td>   <td>46726</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@3590fc5b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="6c77c7">  <td>23/02/16 18:55:27</td>   <td>31769</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSearchPOM2.testSearchSelenium()[pri:0, instance:com.searchTests.TestSearchPOM2@41d477ed]">testSearchSelenium</td> 
+  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="986f76">  <td>23/02/16 18:55:02</td>   <td>6808</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.searchTests.TestSearch@1bb5a082]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="986f76">  <td>23/02/16 18:54:47</td>   <td>-7999</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.searchTests.TestSearchPOM@f6efaab]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="986f76">  <td>23/02/16 18:55:10</td>   <td>15145</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.facebookLoginTests.LoginTest@78691363]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="986f76">  <td>23/02/16 18:54:47</td>   <td>-7999</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.searchTests.TestSearchPOM@f6efaab]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="986f76">  <td>23/02/16 18:54:55</td>   <td>-259</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.searchTests.TestSearchPOM@f6efaab]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="aaecc3">  <td>23/02/16 18:55:04</td>   <td>9116</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.invalidLoginTest()[pri:0, instance:com.facebookLoginTests.LoginTest@78691363]">invalidLoginTest</td> 
+  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="dda9cc">  <td>23/02/16 18:55:34</td>   <td>39292</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.registrationTest()[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@3590fc5b]">registrationTest</td> 
+  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="d8c9b7">  <td>23/02/16 18:54:58</td>   <td>2549</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSearch.testSearch()[pri:0, instance:com.searchTests.TestSearch@1bb5a082]">testSearch</td> 
+  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="d28871">  <td>23/02/16 18:54:42</td>   <td>-13228</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSearchPOM.testSearch()[pri:0, instance:com.searchTests.TestSearchPOM@f6efaab]">testSearch</td> 
+  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="aaecc3">  <td>23/02/16 18:55:12</td>   <td>17318</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testLogin()[pri:0, instance:com.facebookLoginTests.LoginTest@78691363]">testLogin</td> 
+  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="986f76">  <td>23/02/16 18:54:55</td>   <td>-259</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.searchTests.TestSearchPOM@f6efaab]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="986f76">  <td>23/02/16 18:55:32</td>   <td>37019</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.searchTests.TestSearchPOM2@41d477ed]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="986f76">  <td>23/02/16 18:55:37</td>   <td>42302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@3590fc5b]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="986f76">  <td>23/02/16 18:55:17</td>   <td>21979</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.facebookLoginTests.LoginTest@78691363]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="986f76">  <td>23/02/16 18:55:32</td>   <td>37019</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.searchTests.TestSearchPOM2@41d477ed]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="986f76">  <td>23/02/16 18:55:17</td>   <td>21979</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.facebookLoginTests.LoginTest@78691363]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="986f76">  <td>23/02/16 18:55:24</td>   <td>29140</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.searchTests.TestSearchPOM2@41d477ed]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="986f76">  <td>23/02/16 18:55:37</td>   <td>42302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@3590fc5b]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="dda9cc">  <td>23/02/16 18:55:39</td>   <td>44251</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.registrationTest_Stewrt()[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@3590fc5b]">registrationTest_Stewrt</td> 
+  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="986f76">  <td>23/02/16 18:55:42</td>   <td>46726</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@3590fc5b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="986f76">  <td>23/02/16 18:55:10</td>   <td>15145</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.facebookLoginTests.LoginTest@78691363]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="986f76">  <td>23/02/16 18:55:24</td>   <td>29140</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.searchTests.TestSearchPOM2@41d477ed]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="6c77c7">  <td>23/02/16 18:55:19</td>   <td>24079</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSearchPOM2.testSearch()[pri:0, instance:com.searchTests.TestSearchPOM2@41d477ed]">testSearch</td> 
+  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="d28871">  <td>23/02/16 18:54:49</td>   <td>-5755</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSearchPOM.testSearchSelenium()[pri:0, instance:com.searchTests.TestSearchPOM@f6efaab]">testSearchSelenium</td> 
+  <td>main@1278852808</td>   <td></td> </tr>
 </table>
