--- a/test-output/old/SmokeSuite/methods-alphabetical.html
+++ b/test-output/old/SmokeSuite/methods-alphabetical.html
@@ -1,28 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>SmokeSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="916c74">  <td>23/02/12 23:53:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.invalidLoginTest()[pri:0, instance:com.facebookLoginTests.LoginTest@5c33f1a9]">invalidLoginTest</td> 
-  <td>main@1233705144</td>   <td></td> </tr>
-<tr bgcolor="736b95">  <td>23/02/12 23:53:24</td>   <td>12840</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.registrationTest()[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@22555ebf]">registrationTest</td> 
-  <td>main@1233705144</td>   <td></td> </tr>
-<tr bgcolor="736b95">  <td>23/02/12 23:53:27</td>   <td>15673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.registrationTest_Stewrt()[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@22555ebf]">registrationTest_Stewrt</td> 
-  <td>main@1233705144</td>   <td></td> </tr>
-<tr bgcolor="c386c8">  <td>23/02/12 23:53:18</td>   <td>6105</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.facebookLoginTests.LoginTest@5c33f1a9]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1233705144</td>   <td></td> </tr>
-<tr bgcolor="c386c8">  <td>23/02/12 23:53:18</td>   <td>6105</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.facebookLoginTests.LoginTest@5c33f1a9]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1233705144</td>   <td></td> </tr>
-<tr bgcolor="c386c8">  <td>23/02/12 23:53:26</td>   <td>14336</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@22555ebf]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1233705144</td>   <td></td> </tr>
-<tr bgcolor="c386c8">  <td>23/02/12 23:53:26</td>   <td>14336</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@22555ebf]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1233705144</td>   <td></td> </tr>
-<tr bgcolor="c386c8">  <td>23/02/12 23:53:23</td>   <td>11283</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.facebookLoginTests.LoginTest@5c33f1a9]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1233705144</td>   <td></td> </tr>
-<tr bgcolor="c386c8">  <td>23/02/12 23:53:23</td>   <td>11283</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.facebookLoginTests.LoginTest@5c33f1a9]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1233705144</td>   <td></td> </tr>
-<tr bgcolor="c386c8">  <td>23/02/12 23:53:28</td>   <td>16894</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@22555ebf]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1233705144</td>   <td></td> </tr>
-<tr bgcolor="c386c8">  <td>23/02/12 23:53:28</td>   <td>16894</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@22555ebf]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1233705144</td>   <td></td> </tr>
-<tr bgcolor="916c74">  <td>23/02/12 23:53:19</td>   <td>7454</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testLogin()[pri:0, instance:com.facebookLoginTests.LoginTest@5c33f1a9]">testLogin</td> 
-  <td>main@1233705144</td>   <td></td> </tr>
+<tr bgcolor="d28871">  <td>23/02/16 18:57:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.invalidLoginTest()[pri:0, instance:com.facebookLoginTests.LoginTest@55183b20]">invalidLoginTest</td> 
+  <td>main@1708169732</td>   <td></td> </tr>
+<tr bgcolor="72937b">  <td>23/02/16 18:57:20</td>   <td>14337</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.registrationTest()[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@815b41f]">registrationTest</td> 
+  <td>main@1708169732</td>   <td></td> </tr>
+<tr bgcolor="72937b">  <td>23/02/16 18:57:24</td>   <td>18086</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.registrationTest_Stewrt()[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@815b41f]">registrationTest_Stewrt</td> 
+  <td>main@1708169732</td>   <td></td> </tr>
+<tr bgcolor="dced80">  <td>23/02/16 18:57:12</td>   <td>5523</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.facebookLoginTests.LoginTest@55183b20]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1708169732</td>   <td></td> </tr>
+<tr bgcolor="dced80">  <td>23/02/16 18:57:12</td>   <td>5523</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.facebookLoginTests.LoginTest@55183b20]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1708169732</td>   <td></td> </tr>
+<tr bgcolor="dced80">  <td>23/02/16 18:57:23</td>   <td>16766</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@815b41f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1708169732</td>   <td></td> </tr>
+<tr bgcolor="dced80">  <td>23/02/16 18:57:23</td>   <td>16766</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@815b41f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1708169732</td>   <td></td> </tr>
+<tr bgcolor="dced80">  <td>23/02/16 18:57:18</td>   <td>12110</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.facebookLoginTests.LoginTest@55183b20]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1708169732</td>   <td></td> </tr>
+<tr bgcolor="dced80">  <td>23/02/16 18:57:18</td>   <td>12110</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.facebookLoginTests.LoginTest@55183b20]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1708169732</td>   <td></td> </tr>
+<tr bgcolor="dced80">  <td>23/02/16 18:57:24</td>   <td>18091</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@815b41f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1708169732</td>   <td></td> </tr>
+<tr bgcolor="dced80">  <td>23/02/16 18:57:24</td>   <td>18091</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.facebookRegistrationTests.RegistrationTest@815b41f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1708169732</td>   <td></td> </tr>
+<tr bgcolor="d28871">  <td>23/02/16 18:57:14</td>   <td>7409</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testLogin()[pri:0, instance:com.facebookLoginTests.LoginTest@55183b20]">testLogin</td> 
+  <td>main@1708169732</td>   <td></td> </tr>
 </table>
